Bug 164855 - Crash while centering table contents
Summary: Crash while centering table contents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.1 rc
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
: 165101 165184 165224 165240 165426 165794 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-25 22:47 UTC by Mihai Vasiliu
Modified: 2025-03-18 13:29 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Presentation that crashes (649.11 KB, application/vnd.oasis.opendocument.presentation)
2025-01-25 22:47 UTC, Mihai Vasiliu
Details
Crash dump (231.37 KB, application/octet-stream)
2025-01-25 22:48 UTC, Mihai Vasiliu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Vasiliu 2025-01-25 22:47:27 UTC
Description:
When centering table contents Impress crashes.

Steps to Reproduce:
1. Open the attached presentation
2. Select all cells from the table
3. Click on allign center from the toolbar

Actual Results:
Impress crashes. See crash dump attached

Expected Results:
All contents should be centered with no crash.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.2 (X86_64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded
Comment 1 Mihai Vasiliu 2025-01-25 22:47:45 UTC
Created attachment 198767 [details]
Presentation that crashes
Comment 2 Mihai Vasiliu 2025-01-25 22:48:07 UTC
Created attachment 198768 [details]
Crash dump
Comment 3 Mihai Vasiliu 2025-01-26 19:03:29 UTC
The crash is reproducible even if I start from scratch, creating a new presentation, adding a table and centering the contents of the whole table.
Comment 4 raal 2025-01-26 19:08:07 UTC
confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9dd225ee8c45d6c944b9ce5578780d89612e9ffb
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

works in Version: 7.3.7.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Ubuntu package version: 1:7.3.7-0ubuntu0.22.04.7
Calc: threaded
Comment 5 raal 2025-01-27 20:17:13 UTC
This seems to have begun at the below commit in bibisect repository/OS XXXX.
Adding Cc: to Balazs Varga ; Could you possibly take a look at this one?
Thanks
 3e36e771ae81619a569e87df0f00e32b32bb1323 is the first bad commit
commit 3e36e771ae81619a569e87df0f00e32b32bb1323
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Oct 16 20:35:31 2024 +0200

    source 1d9ce0a67a71e51569cd33c26270eeece587a354

174885: tdf#162571 - sd: Text box expands or shrinks on left or right or | https://gerrit.libreoffice.org/c/core/+/174885
Comment 6 Commit Notification 2025-01-28 08:33:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4354919a9e5bea6182b23c7fbc93ce082111a44c

tdf#164855 sd - fix crash while centering table contents

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-01-28 10:19:00 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a2309c06c6e9205b837387335a76af6533826e8a

tdf#164855 sd - fix crash while centering table contents

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-01-29 12:40:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f8ee2ccc0a1059759706ecbb1a7d592084dedc9

tdf#164855: sd_uiimpress: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2025-02-07 13:17:25 UTC
*** Bug 165101 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2025-02-11 08:33:55 UTC
*** Bug 165184 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2025-02-13 08:30:07 UTC
*** Bug 165224 has been marked as a duplicate of this bug. ***
Comment 12 raal 2025-02-13 17:59:51 UTC
*** Bug 165240 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2025-02-25 08:27:07 UTC
*** Bug 165426 has been marked as a duplicate of this bug. ***
Comment 14 thurston.more@laposte.net 2025-02-28 11:13:35 UTC
Just in case of, i confirm (is it really required?) that 25.2.1 solves the issue (i am on linux).
thanks
Cheers
T
Comment 15 raal 2025-03-18 13:29:45 UTC
*** Bug 165794 has been marked as a duplicate of this bug. ***