tdf#164855 sd - fix crash while centering table contents

regression from: 1d9ce0a67a71e51569cd33c26270eeece587a354
(tdf#162571 - sd: Text box expands or shrinks on left or right...)

Change-Id: I75425dc15f40a32c353284f0a1338e117b8db018
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180809
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 4354919a9e5bea6182b23c7fbc93ce082111a44c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180814
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>